--- a/codefresh/kustomize/base/octopub-ingress.yaml
+++ b/codefresh/kustomize/base/octopub-ingress.yaml
@@ -4,8 +4,7 @@ metadata:
   name: octopub-ingress
   annotations:
 spec:
-#  ingressClassName: nginx
-  ingressClass: traefik-internal
+  ingressClassName: nginx
   rules:
   - host:
     http:
