--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -18,6 +18,14 @@ jobs:
           with:
             username: ${{ secrets.DOCKER_USERNAME }}
             password: ${{ secrets.DOCKER_PASSWORD }}
+
+        - name: Set up JDK 17
+          uses: actions/setup-java@v3
+          with:
+            distribution: 'adopt'
+            java-version: '17'       
+            cache: 'maven'
+
         - name: build microservice utils docker jar
           run: |
             chmod +x ./mvnw
