--- a/github/java-microservice/action.yaml
+++ b/github/java-microservice/action.yaml
@@ -141,3 +141,34 @@ runs:
       shell: bash
       working-directory: java/${{ inputs.service_directory }}
 
+    - name: report image by action
+      with:
+        # Name of runtime to implement the enrichment
+        CF_RUNTIME_NAME: 'codefresh-local'
+
+        # Codefresh API key !! Committing a plain text token is a security risk. We highly recommend using encrypted secrets. !!
+        # Documentation - https://docs.github.com/en/actions/security-guides/encrypted-secrets
+        CF_API_KEY: ${{ secrets.USER_TOKEN }}
+
+        # Name of Container registry integration
+        CF_CONTAINER_REGISTRY_INTEGRATION: 'docker'
+
+        # The git branch which is related for the commit
+        CF_GIT_BRANCH: ${{ github.ref_name }}
+
+        # Image path to enrich 
+        CF_IMAGE: ${{ inputs.dockerhub_username }}/octopub-${{ inputs.service_directory }}-mysql:${{ steps.determine_version.outputs.semVer }}
+
+        # GitHub Access token !! Committing a plain text token is a security risk. We highly recommend using encrypted secrets. !!
+        # Documentation - https://docs.github.com/en/actions/security-guides/encrypted-secrets
+        CF_GITHUB_TOKEN: ${{ secrets.CF_GITHUB_TOKEN }}    
+
+        # # Name of Jira integration
+        # CF_ISSUE_TRACKING_INTEGRATION: 'jira' 
+
+        # # String starting with the issue ID to associate with image
+        # CF_JIRA_MESSAGE: 'CR-11027'
+
+        # # Jira project filter
+        # CF_JIRA_PROJECT_PREFIX: "CR"
+      uses: codefresh-io/codefresh-report-image@latest          
