--- a/github/js-frontend/action.yaml
+++ b/github/js-frontend/action.yaml
@@ -88,3 +88,34 @@ runs:
       shell: bash
       working-directory: js/cypress-frontend
 
+    - name: report image by action
+      with:
+        # Name of runtime to implement the enrichment
+        CF_RUNTIME_NAME: 'codefresh-local'
+
+        # Codefresh API key !! Committing a plain text token is a security risk. We highly recommend using encrypted secrets. !!
+        # Documentation - https://docs.github.com/en/actions/security-guides/encrypted-secrets
+        CF_API_KEY: ${{ inputs.codefresh_token }}
+
+        # Name of Container registry integration
+        CF_CONTAINER_REGISTRY_INTEGRATION: 'twerthi-dockerhub'
+
+        # The git branch which is related for the commit
+        CF_GIT_BRANCH: ${{ github.ref_name }}
+
+        # Image path to enrich 
+        CF_IMAGE: ${{ inputs.dockerhub_username }}/octopub-$frontend::${{ steps.determine_version.outputs.semVer }}
+
+        # GitHub Access token !! Committing a plain text token is a security risk. We highly recommend using encrypted secrets. !!
+        # Documentation - https://docs.github.com/en/actions/security-guides/encrypted-secrets
+        CF_GITHUB_TOKEN: ${{ inputs.github_codefresh_token }}    
+
+        # # Name of Jira integration
+        # CF_ISSUE_TRACKING_INTEGRATION: 'jira' 
+
+        # # String starting with the issue ID to associate with image
+        # CF_JIRA_MESSAGE: 'CR-11027'
+
+        # # Jira project filter
+        # CF_JIRA_PROJECT_PREFIX: "CR"
+      uses: codefresh-io/codefresh-report-image@latest          
