--- a/codefresh/kustomize/base/octopub-frontend.yaml
+++ b/codefresh/kustomize/base/octopub-frontend.yaml
@@ -27,7 +27,7 @@ spec:
     spec:
       containers:
         - name: web
-          image: twerthi/octopub-frontend
+          image: twerthi/octopub-frontend:0.1.64
           ports:
             - containerPort: 8080
               name: http-port
