--- a/.github/workflows/octopub-audits.yaml
+++ b/.github/workflows/octopub-audits.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: linux-build-agent
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v3
         with:
