--- a/.github/workflows/octopub-products.yaml
+++ b/.github/workflows/octopub-products.yaml
@@ -7,7 +7,8 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    #runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v3
         with:
@@ -24,3 +25,6 @@ jobs:
           service_directory: products-microservice
           github_codefresh_token: ${{ secrets.CF_GITHUB_TOKEN }}
           codefresh_token: ${{ secrets.USER_TOKEN }}
+          octopus_server_url: ${{ secrets.OCTOPUS_SERVER_URL }}
+          octopus_api_key: ${{ secrets.OCTOPUS_API_KEY }}
+          octopus_space: ${{ secrets.OCTOPUS_SPACE }}
