--- a/github/java-microservice/action.yaml
+++ b/github/java-microservice/action.yaml
@@ -49,9 +49,22 @@ inputs:
   github_codefresh_token:
     description: 'The github codefresh token'
     required: true
+  octopus_server_url:
+    description: 'The octopus server url'
+    required: true
+  octopus_api_key:
+    description: 'The octopus api key'
+    required: true
+  octopus_space:
+    description: 'The octopus space'
+    required: true    
 
 runs:
   using: "composite"
+  env:
+  OCTOPUS_URL: ${{ inputs.octopus_server_url }} # address of Octopus Deploy instance (i.e. https://demo.octopus.app)
+  OCTOPUS_API_KEY: ${{ inputs.octopus_server_url }} # API key used with Octopus Deploy instance
+  OCTOPUS_SPACE: ${{ inputs.octopus_server_url }} # or you can specify a Space ID
   steps:
     - name: Clone code repo
       uses: actions/checkout@v2
@@ -177,4 +190,11 @@ runs:
 
         # # Jira project filter
         CF_JIRA_PROJECT_PREFIX: "OC"
-      uses: codefresh-io/codefresh-report-image@latest          
+      uses: codefresh-io/codefresh-report-image@latest
+
+  - name: Push build information to Octopus Deploy 🐙
+    uses: OctopusDeploy/push-build-information-action@v3
+    with:
+      packages: |
+        twerthi/octopub-${{ inputs.service_directory }}-mysql
+      version: ${{ steps.determine_version.outputs.semVer }}
