--- a/.github/workflows/octopub-audits.yaml
+++ b/.github/workflows/octopub-audits.yaml
@@ -8,6 +8,10 @@ on:
 jobs:
   build:
     runs-on: self-hosted
+    env:
+      OCTOPUS_URL: ${{ secrets.OCTOPUS_SERVER_URL }} # address of Octopus Deploy instance (i.e. https://demo.octopus.app)
+      OCTOPUS_API_KEY: ${{ secrets.OCTOPUS_API_KEY }} # API key used with Octopus Deploy instance
+      OCTOPUS_SPACE: ${{ secrets.OCTOPUS_SPACE }} # or you can specify a Space ID    
     steps:
       - uses: actions/checkout@v3
         with:
