--- a/github/java-microservice/action.yaml
+++ b/github/java-microservice/action.yaml
@@ -49,6 +49,15 @@ inputs:
   github_codefresh_token:
     description: 'The github codefresh token'
     required: true
+  octopus_server_url:
+    description: 'The octopus server url'
+    required: true
+  octopus_api_key:
+    description: 'The octopus api key'
+    required: true
+  octopus_space:
+    description: 'The octopus space'
+    required: true    
 
 runs:
   using: "composite"
@@ -186,3 +195,6 @@ runs:
         packages: |
           twerthi/octopub-${{ inputs.service_directory }}-mysql
         version: ${{ steps.determine_version.outputs.semVer }}
+        server: ${{ inputs.octopus_server_url }}
+        api_Key: ${{ inputs.octopus_api_key }}
+        space: ${{ inputs.octopus_space }}
