--- a/github/java-microservice/action.yaml
+++ b/github/java-microservice/action.yaml
@@ -173,7 +173,7 @@ runs:
         CF_GIT_BRANCH: ${{ github.ref_name }}
 
         # Image path to enrich 
-        CF_IMAGE: ${{ inputs.dockerhub_username }}/octopub-${{ inputs.service_directory }}-mysql:${{ steps.determine_version.outputs.semVer }}
+        CF_IMAGE: docker.io/${{ inputs.dockerhub_username }}/octopub-${{ inputs.service_directory }}-mysql:${{ steps.determine_version.outputs.semVer }}
 
         # GitHub Access token !! Committing a plain text token is a security risk. We highly recommend using encrypted secrets. !!
         # Documentation - https://docs.github.com/en/actions/security-guides/encrypted-secrets
@@ -189,12 +189,12 @@ runs:
         CF_JIRA_PROJECT_PREFIX: "OC"
       uses: codefresh-io/codefresh-report-image@latest
 
-    - name: Push build information to Octopus Deploy 🐙
-      uses: OctopusDeploy/push-build-information-action@v3
-      with:
-        packages: |
-          twerthi/octopub-${{ inputs.service_directory }}-mysql
-        version: ${{ steps.determine_version.outputs.semVer }}
-        server: ${{ inputs.octopus_server_url }}
-        api_Key: ${{ inputs.octopus_api_key }}
-        space: ${{ inputs.octopus_space }}
+    # - name: Push build information to Octopus Deploy 🐙
+    #   uses: OctopusDeploy/push-build-information-action@v3
+    #   with:
+    #     packages: |
+    #       twerthi/octopub-${{ inputs.service_directory }}-mysql
+    #     version: ${{ steps.determine_version.outputs.semVer }}
+    #     server: ${{ inputs.octopus_server_url }}
+    #     api_Key: ${{ inputs.octopus_api_key }}
+    #     space: ${{ inputs.octopus_space }}
