--- a/.github/workflows/octopub-frontend.yaml
+++ b/.github/workflows/octopub-frontend.yaml
@@ -4,10 +4,13 @@ permissions:
   packages: write
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v3
         with:
@@ -21,3 +24,6 @@ jobs:
           dockerhub_password: ${{ secrets.DOCKER_PASSWORD }}
           github_codefresh_token: ${{ secrets.CF_GITHUB_TOKEN }}
           codefresh_token: ${{ secrets.USER_TOKEN }}
+          octopus_server_url: ${{ secrets.OCTOPUS_SERVER_URL }}
+          octopus_api_key: ${{ secrets.OCTOPUS_API_KEY }}
+          octopus_space: ${{ secrets.OCTOPUS_SPACE }}          
