--- a/github/js-frontend/action.yaml
+++ b/github/js-frontend/action.yaml
@@ -110,7 +110,7 @@ runs:
         CF_GIT_BRANCH: ${{ github.ref_name }}
 
         # Image path to enrich 
-        CF_IMAGE: ${{ inputs.dockerhub_username }}/octopub-frontend:${{ steps.determine_version.outputs.semVer }}
+        CF_IMAGE: docker.io/${{ inputs.dockerhub_username }}/octopub-frontend:${{ steps.determine_version.outputs.semVer }}
 
         # GitHub Access token !! Committing a plain text token is a security risk. We highly recommend using encrypted secrets. !!
         # Documentation - https://docs.github.com/en/actions/security-guides/encrypted-secrets
@@ -126,4 +126,13 @@ runs:
         # # Jira project filter
         CF_JIRA_PROJECT_PREFIX: "OC"
 
-      uses: codefresh-io/codefresh-report-image@latest          
+      uses: codefresh-io/codefresh-report-image@latest
+    - name: Push build information to Octopus Deploy 🐙
+       uses: OctopusDeploy/push-build-information-action@v3
+       with:
+         packages: |
+           twerthi/octopub-frontend
+         version: ${{ steps.determine_version.outputs.semVer }}
+         server: ${{ inputs.octopus_server_url }}
+         api_Key: ${{ inputs.octopus_api_key }}
+         space: ${{ inputs.octopus_space }}      
