--- a/kustomize/envs/Development/octopub-frontend-deployment.yaml
+++ b/kustomize/envs/Development/octopub-frontend-deployment.yaml
@@ -1,3 +1,7 @@
 - op: replace
   path: /spec/template/spec/containers/0/ports/0/containerPort
   value: #{Project.Frontend.ContainerPort}
+
+- op: replace
+  path: /spec/template/spec/containers/0/image
+  value: #{Octopus.Action.Package[octopub-frontend].PackageId}:#{Octopus.Action.Package[octopub-frontend].PackageVersion}
