--- a/kustomize/envs/Staging/octopub-audits-deployment-mysql.yaml
+++ b/kustomize/envs/Staging/octopub-audits-deployment-mysql.yaml
@@ -1,3 +1,7 @@
 - op: replace
   path: /spec/template/spec/containers/0/ports/0/containerPort
   value: #{Project.Service.Audit.ContainerPort}
+
+- op: replace
+  path: /spec/template/spec/containers/0/image
+  value: #{Octopus.Action.Package[octopub-audit-microservice-mysql].PackageId}:#{Octopus.Action.Package[octopub-audit-microservice-mysql].PackageVersion}
