--- a/kustomize/envs/Development/kustomization.yaml
+++ b/kustomize/envs/Development/kustomization.yaml
@@ -46,7 +46,7 @@ configMapGenerator:
     env: variables.properties
 
 images:
-  - name: auditservice
+  - name: octopussamples/octopub-audit-microservice-mysql
     newName: #{Octopus.Action.Package[octopub-audit-microservice-mysql].PackageId}
     newTag: #{Octopus.Action.Package[octopub-audit-microservice-mysql].PackageVersion}
 #  - name: twerthi/octopub-products-microservice-mysql
