--- a/kustomize/envs/Development/kustomization.yaml
+++ b/kustomize/envs/Development/kustomization.yaml
@@ -49,9 +49,9 @@ images:
   - name: octopussamples/octopub-audit-microservice-mysql
     newName: #{Octopus.Action.Package[octopub-audit-microservice-mysql].PackageId}
     newTag: #{Octopus.Action.Package[octopub-audit-microservice-mysql].PackageVersion}
-#  - name: twerthi/octopub-products-microservice-mysql
-#    newName: twerthi/octopub-products-microservice-mysql
-#    newTag: 0.1.96
-#  - name: twerthi/octopub-audit-microservice-mysql
-#    newName: twerthi/octopub-audit-microservice-mysql
-#    newTag: 0.1.96
+  - name: octopussamples/octopub-products-microservice-mysql
+    newName: #{Octopus.Action.Package[octopub-products-microservice-mysql].PackageId}
+    newTag: #{Octopus.Action.Package[octopub-products-microservice-mysql].PackageVersion}
+  - name: octopussamples/octopub-frontend
+    newName: #{Octopus.Action.Package[octopub-frontend].PackageId}
+    newTag: #{Octopus.Action.Package[octopub-frontend].PackageVersion}
