Updating build process

--- a/.github/workflows/octopub-audits.yaml
+++ b/.github/workflows/octopub-audits.yaml
@@ -4,9 +4,9 @@ permissions:
   packages: write
 on:
   workflow_dispatch:
-  # push:
-  #   branches:
-  #     - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
