Changing image reference to github

--- a/kustomize/base/octopub-audits-mysql.yaml
+++ b/kustomize/base/octopub-audits-mysql.yaml
@@ -27,7 +27,8 @@ spec:
     spec:
       containers:
         - name: auditservice
-          image: octopussamples/octopub-audit-microservice-mysql
+          #image: octopussamples/octopub-audit-microservice-mysql
+          image: ghcr.io/octopussolutionsengineering/octopub-audit-microservice-mysql
           ports:
             - name: http-audit
               containerPort: 10000
