--- a/kustomize/base/octopub-frontend.yaml
+++ b/kustomize/base/octopub-frontend.yaml
@@ -27,7 +27,8 @@ spec:
     spec:
       containers:
         - name: web
-          image: octopussamples/octopub-frontend
+          #image: octopussamples/octopub-frontend
+          image: ghcr.io/octopussolutionsengineering/octopub-frontend
           ports:
             - containerPort: 8080
               name: http-port
