--- a/codefresh/kustomize/envs/Development/kustomization.yaml
+++ b/codefresh/kustomize/envs/Development/kustomization.yaml
@@ -46,7 +46,7 @@ images:
     newTag: 0.1.96
   - name: octopussamples/octopub-products-microservice-mysql
     newName: twerthi/octopub-products-microservice-mysql
-    newTag: 0.1.96
+    newTag: 0.2.36-add-multi-arch.18
   - name: octopussamples/octopub-frontend
     newName: twerthi/octopub-frontend
     newTag: 0.1.96
