--- a/codefresh/kustomize/envs/Development/kustomization.yaml
+++ b/codefresh/kustomize/envs/Development/kustomization.yaml
@@ -43,7 +43,7 @@ configMapGenerator:
 images:
   - name: octopussamples/octopub-audit-microservice-mysql
     newName: twerthi/octopub-audit-microservice-mysql
-    newTag: 0.1.96
+    newTag: 0.2.36-add-multi-arch.18
   - name: octopussamples/octopub-products-microservice-mysql
     newName: octopussamples/octopub-products-microservice-mysql
     newTag: 0.2.36-add-multi-arch.18
