--- a/codefresh/kustomize/envs/Development/kustomization.yaml
+++ b/codefresh/kustomize/envs/Development/kustomization.yaml
@@ -42,11 +42,11 @@ configMapGenerator:
 
 images:
   - name: octopussamples/octopub-audit-microservice-mysql
-    newName: octopussamples/octopub-audit-microservice-mysql
-    newTag: 0.2.36-add-multi-arch.18
+    newName: twerthi/octopub-audit-microservice-mysql
+    newTag: 0.1.96
   - name: octopussamples/octopub-products-microservice-mysql
-    newName: octopussamples/octopub-products-microservice-mysql
-    newTag: 0.2.36-add-multi-arch.18
+    newName: twerthi/octopub-products-microservice-mysql
+    newTag: 0.1.96
   - name: octopussamples/octopub-frontend
     newName: twerthi/octopub-frontend
     newTag: 0.1.96
