--- a/codefresh/helm/octopub-products-mysql/test/templates/deployment.yaml
+++ b/codefresh/helm/octopub-products-mysql/test/templates/deployment.yaml
@@ -42,9 +42,15 @@ spec:
             - name: DATABASE_NAME
               value: {{ .Values.database.name }}
             - name: DATABASE_USERNAME
-              value: {{ .Values.database.username }}
+              valueFrom:
+                secretKeyRef:
+                  name: database-credentials
+                  key: database-user
             - name: DATABASE_PASSWORD
-              value: {{ .Values.database.password }}
+              valueFrom:
+                secretKeyRef:
+                  name: database-credentials
+                  key: database-password
             - name: MIGRATE_AT_START
               value: !!str {{ .Values.database.migrateOnStartup }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
