--- a/codefresh/application/helm/octopub-production-frontend-helm.yaml
+++ b/codefresh/application/helm/octopub-production-frontend-helm.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: octopub-production
+  name: octopub-production-frontend
   annotations:
     codefresh.io/product: octopub
 spec:
