--- a/codefresh/application/helm/octopub-test-audit-helm.yaml
+++ b/codefresh/application/helm/octopub-test-audit-helm.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: octopub-test
+  name: octopub-test-audit
   annotations:
     codefresh.io/product: octopub
 spec:
