--- a/codefresh/helm/octopub-audits-mysql/development/values.yaml
+++ b/codefresh/helm/octopub-audits-mysql/development/values.yaml
@@ -50,23 +50,23 @@ securityContext: {}
   # runAsNonRoot: true
   # runAsUser: 1000
 
-service:
-  type: LoadBalancer
-  port: 80
-  annotations:
-    # https://stackoverflow.com/a/76247614/8246539
-    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
-    service.beta.kubernetes.io/aws-load-balancer-type: external
-    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
+# service:
+#   type: LoadBalancer
+#   port: 80
+#   annotations:
+#     # https://stackoverflow.com/a/76247614/8246539
+#     service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
+#     service.beta.kubernetes.io/aws-load-balancer-type: external
+#     service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
 
 ingress:
-  enabled: false
-  className: ""
+  enabled: true
+#  className: ""
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host:
+    - host: octopub-clusterpi.development.octopusdemos.com
       paths:
         - path: /api/audits
           pathType: Prefix
