--- a/codefresh/helm/octopub-frontend/development/values.yaml
+++ b/codefresh/helm/octopub-frontend/development/values.yaml
@@ -32,7 +32,7 @@ fullnameOverride: ""
 
 serviceAccount:
   # Specifies whether a service account should be created
-  create: true
+  create: false
   # Annotations to add to the service account
   annotations: {}
   # The name of the service account to use.
@@ -53,8 +53,8 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
-  type: LoadBalancer
-  port: 80
+  type: ClusterIP
+  port: 8080
   annotations:
     # https://stackoverflow.com/a/76247614/8246539
     service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
@@ -62,13 +62,13 @@ service:
     service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
 
 ingress:
-  enabled: false
-  className: ""
+  enabled: true
+#  className: ""
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host:
+    - host: octopub-clusterpi.development.octopusdemos.com
       paths:
       - path: /
         pathType: Prefix
