--- a/codefresh/helm/octopub-products-mysql/development/values.yaml
+++ b/codefresh/helm/octopub-products-mysql/development/values.yaml
@@ -11,11 +11,11 @@ image:
   tag: ""
 
 database:
-  hostname: localhost
-  port: 3306
-  name: product
-  username: root
-  password: password
+  hostname: 192.168.1.64
+  port: 30000
+  name: octopub_codefresh_development
+#  username: root
+#  password: password
   migrateOnStartup: true
 
 network:
@@ -48,8 +48,8 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
-  type: LoadBalancer
-  port: 80
+  type: ClusterIP
+  port: 8083
   annotations:
     # https://stackoverflow.com/a/76247614/8246539
     service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
@@ -57,13 +57,13 @@ service:
     service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
 
 ingress:
-  enabled: false
-  className: ""
+  enabled: true
+#  className: ""
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host:
+    - host:  octopub-clusterpi.development.octopusdemos.com
       paths:
         - path: /api/products
           pathType: Prefix
