Updating helm app of apps definitions

--- a/codefresh/application/helm/octopub-development-helm.yaml
+++ b/codefresh/application/helm/octopub-development-helm.yaml
@@ -20,9 +20,9 @@ spec:
     server: https://kubernetes.default.svc
     namespace: development
   syncPolicy:
-    automated: 
-      prune: true
-      selfHeal: true
+#    automated: 
+#      prune: true
+#      selfHeal: true
     syncOptions:
     - Validate=false
     - CreateNamespace=true
