--- a/codefresh/helm/octopub-audits-mysql/development/values.yaml
+++ b/codefresh/helm/octopub-audits-mysql/development/values.yaml
@@ -18,8 +18,8 @@ database:
 #  password: password
   migrateOnStartup: true
 
-application:
-  disableAuth: false
+#application:
+#  disableAuth: false
 
 network:
   port: 10000
