--- a/codefresh/application/helm/octopub-production-helm.yaml
+++ b/codefresh/application/helm/octopub-production-helm.yaml
@@ -16,6 +16,9 @@ spec:
     - repoURL: https://github.com/twerthi/octopub.git
       targetRevision: HEAD
       path: codefresh/helm/octopub-frontend/production
+    - repoURL: https://github.com/twerthi/octopub.git
+      targetRevision: HEAD
+      path: codefresh/helm/octopub-secret/production      
   destination:
     server: https://kubernetes.default.svc
     namespace: production
