Moving to bespoke namespace

--- a/codefresh/application/helm/octopub-development-helm.yaml
+++ b/codefresh/application/helm/octopub-development-helm.yaml
@@ -21,7 +21,7 @@ spec:
       path: codefresh/helm/octopub-secret/development          
   destination:
     server: https://kubernetes.default.svc
-    namespace: development
+    namespace: cf-development
   syncPolicy:
 #    automated: 
 #      prune: true
