Moving to bespoke namespace

--- a/codefresh/application/helm/octopub-development-helm.yaml
+++ b/codefresh/application/helm/octopub-development-helm.yaml
@@ -23,9 +23,9 @@ spec:
     server: https://kubernetes.default.svc
     namespace: cf-development
   syncPolicy:
-#    automated: 
-#      prune: true
-#      selfHeal: true
+    automated: 
+      prune: true
+      selfHeal: true
     syncOptions:
     - Validate=false
     - CreateNamespace=true
