--- a/codefresh/applicationset/octopub-development-kustomize.yaml
+++ b/codefresh/applicationset/octopub-development-kustomize.yaml
@@ -17,10 +17,13 @@ spec:
       name: '{{cluster}}-octopub-development'
     spec:
       project: default
-      source:
-        repoURL: https://github.com/twerthi/octopub.git
-        targetRevision: HEAD
-        path: codefresh/kustomize/envs/Development
+      sources:
+        - repoURL: https://github.com/twerthi/octopub.git
+          targetRevision: HEAD
+          path: codefresh/kustomize/envs/Development
+        - repoURL: https://github.com/twerthi/octopub.git
+          targetRevision: HEAD
+          path: codefresh/kustomize/octopub-secret/{{cluster}}/development
       destination:
         server: '{{url}}'
         namespace: development
